# Marvel-digesh

./: Activity 3 and 4 digesh.ipynb  Activity 3 and 4 digesh.py  Activity 5 digesh.py  README.md  pyproject.toml
src/marvel-api-digesh/: Activity 5 digesh.ipynb  Avtivity 2 Digesh.ipynb  Avtivity 2 Digesh.py  utils digesh.py
src/marvel_api_digeshG.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
