[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marvel-api-digeshG"
version = "0.0.1"
authors = [
  { name="Digesh gaundhar", email="digesh2k@gmail.com" },
]
description = "FAA marvel package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dig16/Marvel-digesh"
"Bug Tracker" = "https://github.com/dig16/Marvel-digesh/issues"